@@ -1,3 +1,5 @@
+nte.define("app.cv_data")
+
 app.cv_data.it = {
 
 	head: {
@@ -11,7 +13,7 @@ app.cv_data.it = {
 
     briefly: {
     	lines: [
-            "motivato al problem solving o alla gestione commerciale, in sintonia con la politica e metodologie aziendali",
+            "motivato al problem solving o alla gestione commerciale, in sintonia con la politica e metodologie aziendali. in team o autonomia",
             "attenzione bilanciabile tra costi/benefici e performance",
             "attraverso tutti gli aspetti del ciclo di vita, dalla R&D al post vendita con relativi strumenti",
         	"soluzioni creative tramite brainstorming, mind maps, //in team o in autonomia//", 
