@@ -2,10 +2,12 @@ root
 	180910\s.zaglio: moved changelogs comments to common CHANGELOG file
 
 nte.js
+	180912\s.zaglio: added fn for optional global objects definition and extension 
 	180911\s.zaglio: added textNodes walker, search&replace; refined logic
 	180910\s.zaglio: added getParamNames to simplify components function management in the future
 
 main.js
+	180912\s.zaglio: adapted to bootLoader; removed continuouse show of start message
 	180911\s.zaglio: replace of [tag] and %tag% using textNodes; adapted to new nte logic
 	180910\s.zaglio: changed <lang-link> and call of html component function
 	180907\s.zaglio: renamed from app.js; refactoring
@@ -13,6 +15,7 @@ main.js
 	180612\s.zaglio: begin of apply Brian W. Kernighan and P. J. Plaugher principle
 
 curriculum.htm
+	180912\s.zaglio: adapted to bootLoader; removed app' scripts
 	180911\s.zaglio: added <list></list> to some section to identify dynamic part
 	180910\s.zaglio: renamed and restructured <lang-link> tag
 	180907\s.zaglio: eng. version
@@ -24,3 +27,6 @@ curriculum.htm
 	180608\s.zaglio: added self-taught experience; improved links replace with "&"
 	180601\s.zaglio: added todo section
 	180530\s.zaglio: first semi-definitive version
+
+bootLoader.js
+	180912\s.zaglio: 1st definition
